# equinox_ppo

./: README.md  eqx_utils.py  losses.py  models.py  plotting.py  pyproject.toml  stats.py  train.py
brax_ppo/: losses.py  run.py  running_statistics.py  train.py
eqx_ppo/: eqx_utils.py  losses.py  models.py  stats.py  train.py
